[project]
name = "fullon-cache"
version = "0.2.0"
description = "Cache module for Fullon trading system"
authors = [
    {name = "Fullon Project"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fullon-orm @ git+ssh://git@github.com/ingmarAvocado/fullon_orm.git",
    "redis[hiredis] (>=6.2.0,<7.0.0)"
]

[project.optional-dependencies]
uvloop = [
    "uvloop (>=0.20.0); sys_platform != 'win32'"
]
performance = [
    "uvloop (>=0.20.0); sys_platform != 'win32'",
    "cython",
    "hiredis"
]
packages = [
    { include = "fullon_cache", from = "src" }
]
include = [
    { path = "py.typed", format = "sdist" },
    { path = "src/fullon_cache/py.typed", format = "wheel" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^1.0.0"
pytest-xdist = "^3.7.0"
pytest-cov = "^6.1.1"
pytest-order = "^1.2.0"
ruff = "^0.11.12"
mypy = "^1.16.0"
types-redis = "^4.6.0.20241004"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-vv --strict-markers --tb=short --cov=fullon_cache --cov-branch --cov-report=term-missing --cov-report=html"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests",
    "redis: marks tests that require Redis",
]
console_output_style = "progress"

[tool.coverage.run]
source = ["src/fullon_cache"]
branch = true
omit = [
    "*/tests/*",
    "*/examples/*",
    "*/docs/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/shit_version/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "raise AssertionError",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "D103"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

